RESOLVED FIXED57442
REGRESSION(r82419): New pixel test failure fast/box-shadow/basic-shadows.html
https://bugs.webkit.org/show_bug.cgi?id=57442
Summary REGRESSION(r82419): New pixel test failure fast/box-shadow/basic-shadows.html
Yuta Kitamura
Reported 2011-03-30 05:04:06 PDT
fast/box-shadow/basic-shadows.html started to fail since r82419. See attached screenshots.
Attachments
Actual result (55.80 KB, image/png)
2011-03-30 05:05 PDT, Yuta Kitamura
no flags
Expected result (55.29 KB, image/png)
2011-03-30 05:06 PDT, Yuta Kitamura
no flags
Patch (1.38 KB, patch)
2011-03-30 08:35 PDT, Yael
no flags
Yuta Kitamura
Comment 1 2011-03-30 05:05:42 PDT
Created attachment 87505 [details] Actual result
Yuta Kitamura
Comment 2 2011-03-30 05:06:11 PDT
Created attachment 87506 [details] Expected result
Yael
Comment 3 2011-03-30 05:53:30 PDT
Sorry about the regression. What port is doing that? I don't see it on the mac build bot.
Yuta Kitamura
Comment 4 2011-03-30 05:58:20 PDT
At least, all Chromium bots are affected. I think this can be reproduced on all ports. The bots in WebKit waterfall do not run pixel tests. You can try it (even on Apple's Mac port) manually with: run-webkit-tests -p --tolerance=0 fast/box-shadow/basic-shadows.html
Yael
Comment 5 2011-03-30 08:35:46 PDT
Created attachment 87542 [details] Patch Don't consider br as text when evaluating the logically last run to decide if it is last for its renderer.
Eric Seidel (no email)
Comment 6 2011-03-30 08:38:00 PDT
Comment on attachment 87542 [details] Patch OK. Sad this is only covered by pixel tests.
WebKit Commit Bot
Comment 7 2011-03-30 10:10:46 PDT
Comment on attachment 87542 [details] Patch Clearing flags on attachment: 87542 Committed r82461: <http://trac.webkit.org/changeset/82461>
WebKit Commit Bot
Comment 8 2011-03-30 10:10:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.